# Sales-Aggregator

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  front1911.html  pyproject.toml  requirements.txt
Sales_Aggregator/: data_backup.json  db.sqlite3  manage.py
Sales_Aggregator/Sales_Aggregator/: settings.py  urls.py
Sales_Aggregator/discounts/: admin.py  forms.py  models.py  urls.py  views.py
Sales_Aggregator/discounts/migrations/: 0001_initial.py  0002_remove_category_created_at.py
Sales_Aggregator/discounts/templates/discounts/: base.html  create_post.html  favorites.html  home.html  user_posts.html
Sales_Aggregator/users/: apps.py  forms.py  models.py  urls.py  views.py
Sales_Aggregator/users/migrations/: 0001_initial.py  0003_alter_customuser_options_customuser_created_at.py
Sales_Aggregator/users/templates/users/: login.html  profile.html  register.html
src/: front1.html  front7.11.html  index.html  main.py
